modified db name.

--- a/db-deployment.yaml
+++ b/db-deployment.yaml
@@ -37,7 +37,7 @@ spec:
       containers:
         - image: mysql:5.7 # image from docker-hub
           args:
-            - "--ignore-db-dir=lost+found" # Workaround for https://github.com/docker-library/mysql/issues/186
+            - "--ignore-db-dir=lost+found"
           name: mysql
           env:
             - name: MYSQL_ROOT_PASSWORD
